[bugfree 2917] GVC3220_V20.19.12.30_WebCall: web interface dialing interface, unable to click the call button behind the conference record
Cause: None
Solution:  add select all function
Fixed Version: 20200313
Branch: GVC3220

Reviewed-on: https://192.168.120.246/182001
Tested-by: yplu <yplu@grandstream.cn>

--- a/webgui/gvc3200_new/src/components/ComponentsOfCall/ConfCallModal/ConfCallModal.less
+++ b/webgui/gvc3200_new/src/components/ComponentsOfCall/ConfCallModal/ConfCallModal.less
@@ -13,20 +13,31 @@
   .conf-call-footer {
     height: 40px;
     line-height: 40px;
+    padding-left: 35px;
+    padding-right: 10px;
+    .select-all {
+      float: left;
+    }
   }
   .conf-call-tip {
     height: 22px;
     font-size: 12px;
     text-align: center;
     margin-bottom: 4px;
+    margin-left: -10px;
+    margin-right: -10px;
     span {
       background: rgb(226, 83, 83);
       font-size: 12px;
       color: #fff;
       display: inline-block;
       line-height: 22px;
-      padding:0 10px;
+      padding:0 5px;
       border-radius: 4px;
+      max-width: 100%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     .icon-info {
       vertical-align: middle;
